--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    Hello World!
+    <div>
+        <img src="images/nopitri.jpg" width="300" alt="profile image" />
+        <h2> Nopitri</h2>
+    </div>
 </body>
 </html>
