Added ids for each profile element

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div>
-        <img src="images/nopitri.jpg" width="300" alt="profile image" />
-        <h2> Nopitri</h2>
+        <img id="profile-photo" src="images/nopitri.jpg" width="300" alt="profile image" />
+        <h2 id="profile-name">Nopitri</h2>
     </div>
 </body>
 </html>
