--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <div id="profile-container">
         <img id="profile-photo" src="images/nopitri.jpg" width="300" alt="profile image" />
         <h2 id="profile-name">Nopitri</h2>
     </div>
