added new div as header container with id = header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="header">Header</div>
     <div id="profile-container">
         <img id="profile-photo" src="images/nopitri.jpg" width="300" alt="profile image" />
         <h2 id="profile-name">Nopitri</h2>
