--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <img id="profile-photo" src="images/nopitri.jpg" width="300" alt="profile image" />
         <h2 id="profile-name">Nopitri</h2>
     </div>
+    <div id="footer">Footer</div>
 </body>
 </html>
