--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="profile-container">
         <img id="profile-photo" src="images/nopitri.jpg" width="300" alt="profile image" />
         <h2 id="profile-name">Nopitri</h2>
+        <p id="profile-job">Software Engineer</p>
     </div>
     <div id="footer">Footer</div>
 </body>
